correct gap

--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -158,7 +158,7 @@
 
 .contacts-tel-link {
   display: flex;
-  gap: 14px;
+  gap: 11px;
   align-items: center;
 
   @include font(400, 14px, 1.21, 0.02em);
